Добавление ссылки на профиль
Добавлен код на мой профиль в Цифровом университете АлтГУ.

--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 <body>
     <h1> Колупаева Виктория Викторовна</h1>
     <p> Всем привет! Это моя страница, и теперь она в Github! </p>
+    <a href="https://portal.edu.asu.ru/user/profile.php?id=35426">Ссылка на мой профиль </a>
 </body>
 </html>
