--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <h1> Колупаева Виктория Викторовна</h1>
     <p> Всем привет! Это моя страница, и теперь она в Github! </p>
     <a href="https://portal.edu.asu.ru/user/profile.php?id=35426">Ссылка на мой профиль </a>
+    <img src="https://forum.sibmama.ru/usrpx/140637/140637_800x671_0_49d0_84b7bec3_XL1_1.jpg">
 </body>
 </html>
